--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,7 +28,7 @@
                 <p><%= resultat[i].description %></p>
 
                 <input type="button" value="Modifier" onclick="remplirDonnees('<%= resultat[i].id %>', '<%= resultat[i].titre %>', '<%= resultat[i].description %>')">
-                <input type="button" value="Supprimer" onclick="">
+                <input type="button" value="Supprimer" onclick="supprimer('<%= resultat[i].id %>')">
             <% } %>
         </section>
     </div>
@@ -38,6 +38,14 @@
             document.getElementById('id').value = id;
             document.getElementById('titre').value = titre;
             document.getElementById('description').value = description;
+        }
+
+        function supprimer(id) {
+            let pointFinal = "notes/" + id;
+            fetch(pointFinal, {method: "DELETE"})
+                .then((reponse) => reponse.json()
+                ).then((donnee) => window.location.href = donnee.routeRacine
+                ).catch((erreur) => console.log(erreur));
         }
     </script>
 
